# timemanagement

./: .gitattributes  .gitignore  ASSIGNEE_FILTER_IMPLEMENTATION.md  BACKWARD_COMPATIBILITY_FIX.md  CHANGES_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.user.shared  DRAFT_FLAG_IMPLEMENTATION.md  DRAFT_MANAGEMENT_IMPLEMENTATION.md  DYNAMIC_LISTHEADER_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LISTHEADER_BACKWARD_COMPATIBILITY.md  MULTIPLE_ASSIGNEES_GUIDE.md  MULTIPLE_ASSIGNEE_IMPLEMENTATION.md  PERSONAL_STAGES_FILTER_FIX.md  PERSONAL_STAGES_IMPLEMENTATION.md  PERSONAL_STAGES_UI_INTEGRATION.md  PERSONAL_STAGES_VISUAL_GUIDE.md  README.md  STAGE_CHANGE_IMPLEMENTATION.md  STAGE_CHANGE_QUICK_START.md  STAGE_SELECTOR_WITH_FALLBACK.md  TASKSTAGE_POPUP_FIX.md  TEST_DRAFT_FLAG.md  assignee_filter_test_results.txt  clickable.yaml  docs-guide-plan.md  dump_db.py  manifest.json.in  pulse-socket  push-helper.py  query_db.py  start-daemon.sh  test_assignee_filter.sh  test_daemon_notification.py  test_has_draft.sh  test_personal_stage_filter.txt  test_workitem_syntax.sh  translator.md  ubtms-daemon.desktop  (+6 more)
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy-docs.yml
assets/: ACCOUNT_DRAWER_README.md  demo_account_drawer.md
docs/: HLD.drawio  PR-GUIDELINES.md  TECHNICAL-FILE-ORGANIZATION.md
docs/refactor/: phase-1-architecture-contract.md  phase-1-naming-map.md  phase-1-smoke-checklist.md
models/: DbInit.js  Global.js  Main.js  Project.js  Task.js  TimerService.js  Timesheet.js  Utils.js  accounts.js  activity.js  constants.js  database.js  dbinit.js  draft_manager.js  global.js  notifications.js  project.js  sync.js  task.js  timer_service.js  timesheet.js  utils.js
po/: de.po  mr.po  nl.po  nl.po~  sa.po
qml/: Aboutus.qml  Account_Page.qml  Activities.qml  ActivityForm.qml  ActivityList.qml  Activity_Page.qml  Activity_details.qml  Charts1.qml  Charts2.qml  Charts3.qml  Charts4.qml  Dashboard.qml  Dashboard2.qml  Dashboard3.qml  Dashboard_new.qml  DatePicker.qml  Home.qml  Login.qml  Main.qml  ManageAccounts.qml  Menu.qml  MyTasks.qml  MyTasks_DEFAULT_ACCOUNT.md  MyTasks_FILTERING_FIX.md  MyTasks_README.md  ProjectCard.qml  ProjectForm.qml  Project_Create.qml  Project_Page.qml  Project_details.qml  Projects.qml  ReadMorePage.qml  RichTextEditorTest.qml  Setting.qml  Settings_Accounts.qml  Settings_Notifications.qml  Settings_Page.qml  Settings_Sync.qml  Settings_Theme.qml  Splash.qml  (+21 more)
qml-notify-module/: NotificationHelper.cpp  NotificationHelper.h
qml/app/: AppDrawer.qml  AppLayout.qml  GlobalWidgets.qml  StartupManager.qml  SystemIntegrationManager.qml
qml/app/navigation/: MenuPage.qml  NavigationController.qml  NavigationRoutes.js
qml/app/pages/: AboutPage.qml  Splash.qml  release_notes.txt
qml/components/: AccountDrawer.qml  AccountFilter.qml  AccountSelector.qml  AccountSelectorDialog.qml  ActivityDetailsCard.qml  ActivityList.qml  AppDrawer.qml  AppLayout.qml  AssigneeFilterMenu.qml  AttachmentCard.qml  AttachmentExporter.qml  AttachmentImporter.qml  AttachmentManager.qml  AttachmentUploader.qml  AttachmentViewer.qml  BackendBridge.qml  BackupWorkItemSelecotr.qml  Bubblemap.qml  ColorPicker.qml  ContentPickerDialog.qml  CreateUpdateDialog.qml  CreateUpdatePage.qml  CustomDatePicker.qml  DateRangeSelector.qml  DaySelector.qml  DialerMenu.qml  DialogComboSelector.qml  EHower.qml  EHowerIndicator.qml  FormDraftHandler.qml  GlobalTimerWidget.qml  GlobalWidgets.qml  HtmlEditorContainer.qml  HtmlEditorToolbar.qml  ImagePreviewer.qml  InfoBar.qml  InlineOptionSelector.qml  ListHeader.qml  LoadMoreFooter.qml  LoadingIndicator.qml  (+54 more)
qml/components/base/: OutlinedContainer.qml  OutlinedTextField.qml  TSButton.qml  TSCombobox.qml  TSIconButton.qml  TSLabel.qml  TSProgressbar.qml
qml/components/cards/: ActivityDetailsCard.qml  ProjectDetailsCard.qml  TasksForDayWidget.qml  UpdatesDetailsCard.qml
qml/components/dialogs/: AccountSelectorDialog.qml  ColorPicker.qml  ContentPickerDialog.qml  CreateUpdateDialog.qml  SaveDiscardDialog.qml  TimePickerPopup.qml
qml/components/feedback/: InfoBar.qml  LoadMoreFooter.qml  LoadingIndicator.qml  NotificationBell.qml  NotificationPopup.qml
qml/components/js/: editor.html  squire-qtwebengine-bridge.js
qml/components/navigation/: AccountDrawer.qml  DialerMenu.qml  ListHeader.qml  NavigationMenuList.qml
qml/components/pickers/: CustomDatePicker.qml  DateRangeSelector.qml  DaySelector.qml  QuickDateSelector.qml
qml/components/richtext/: ColorPickerDialog.qml  FontSizeDialog.qml  HtmlEditorContainer.qml  HtmlEditorToolbar.qml  LinkDialog.qml  ReadMorePage.qml  RichTextEditor.qml  RichTextPreview.qml  ToolbarSeparator.qml  qmldir
qml/components/selectors/: AccountSelector.qml  AssigneeFilterMenu.qml  DialogComboSelector.qml  InlineOptionSelector.qml  MultiAssigneeSelector.qml  OptionSelectorPopover.qml  ProjectSelector.qml  ProjectStageSelector.qml  SelectionButton.qml  StageFilterMenu.qml  StatusSelector.qml  TreeSelector.qml  UserSelector.qml  WorkItemSelector.qml
qml/components/settings/: SettingsHeader.qml  SettingsListItem.qml  SettingsPageLayout.qml  SettingsToggleItem.qml  qmldir
qml/features/dashboard/: Charts1.qml  (+6 more)
qml/settings/: Settings_Accounts.qml  Settings_Notifications.qml  Settings_Page.qml  Settings_Sync.qml  Settings_Theme.qml  Settings_VoiceModel.qml
scripts/: find_unused_timesheet_functions.sh  refactor_phase1_checks.sh
src/: README.md  add_demo_connection.py  all_odoo_fields.json  autotester.py  backend.py  bus.py  cli.py  common.py  config.py  daemon.py  daemon_bootstrap.py  field_config.json  logger.py  odoo_client.py  setup_autostart.sh  sync_from_odoo.py  sync_to_odoo.py  tool_field_sync.py  tool_get_remote_record.py  watchdog.sh
src/odoo_config/: all_odoo_fields.json
src/test_data/: temp_app.db
src/tools/: tool_field_sync.py
tools/: bump_version.py
voice_to_text/: requirements.txt  voice2text.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  versions.json
website/versioned_sidebars/: version-1.2.9-sidebars.json
(+189 files in other folders)
